Code refactoring (#41)
- Move code from java to kotlin
- Add Jetpack Compose support
- Add state machine and simplify library interface